[gd_scene load_steps=29 format=3 uid="uid://cojkicds8uf8c"]

[ext_resource type="Script" path="res://entities/enemy/boss.gd" id="1_m1li8"]
[ext_resource type="AudioStream" uid="uid://dc0pm3gmnb134" path="res://sound/sfx/Explosions/Repeating_explosion.wav" id="2_veit0"]
[ext_resource type="Script" path="res://entities/enemy/weapons/bullet.gd" id="3_km3fg"]
[ext_resource type="Texture2D" uid="uid://dlholuxpiqcq7" path="res://entities/enemy/circle_boss.png" id="4_2bc68"]
[ext_resource type="PackedScene" uid="uid://m0kvusipjv6x" path="res://entities/enemy/target_lock.tscn" id="4_k7s7j"]
[ext_resource type="Script" path="res://entities/enemy/weapons/attack.gd" id="4_nn3en"]
[ext_resource type="Texture2D" uid="uid://c4865weyxw0ji" path="res://assets/Effects/Explosion.png" id="4_t0exc"]
[ext_resource type="PackedScene" uid="uid://bbtps6a6vw6vw" path="res://entities/enemy/weapons/shooting_component.tscn" id="4_wa46r"]
[ext_resource type="Texture2D" uid="uid://du2oumn8k17xg" path="res://ui/target_lock_medium.png" id="5_h8iit"]
[ext_resource type="Script" path="res://entities/enemy/weapons/patterns/circle_pattern.gd" id="5_ri64t"]
[ext_resource type="Script" path="res://entities/enemy/weapons/patterns/spread_pattern.gd" id="6_lc6i8"]
[ext_resource type="PackedScene" uid="uid://cnt8jlxc1o2co" path="res://entities/enemy/weapons/bullet_shapes/needle.tscn" id="9_2r06l"]
[ext_resource type="PackedScene" uid="uid://kx061m0kpeni" path="res://utility/stopwatch.tscn" id="13_kgi7a"]
[ext_resource type="PackedScene" uid="uid://d1q1sgwkt8wsv" path="res://entities/health_component.tscn" id="14_0th8o"]
[ext_resource type="PackedScene" uid="uid://b7o6u4xr12hnn" path="res://entities/hitbox_component.tscn" id="15_wdne5"]

[sub_resource type="Animation" id="Animation_4pyvs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_2bc68")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ar8am"]
resource_name = "explode"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_t0exc")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_s31ch"]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_158ad"]
resource_name = "shooting"
length = 2.0
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.6, 0.75, 1.35, 1.5, 1.95),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_j5u58"]
resource_name = "shooting_2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_oxk5s"]
resource_name = "shooting_3"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h123k"]
_data = {
"RESET": SubResource("Animation_4pyvs"),
"explode": SubResource("Animation_ar8am"),
"hit": SubResource("Animation_s31ch"),
"shooting": SubResource("Animation_158ad"),
"shooting_2": SubResource("Animation_j5u58"),
"shooting_3": SubResource("Animation_oxk5s")
}

[sub_resource type="Resource" id="Resource_t7lsq"]
script = ExtResource("6_lc6i8")
firing_points = 5
separation_angle = 10.0
ripple = false
ripple_delay = 0.0

[sub_resource type="Resource" id="Resource_1a5ne"]
script = ExtResource("3_km3fg")
bullet_type = 1
bullet_pattern = SubResource("Resource_t7lsq")
bullet_shape = ExtResource("9_2r06l")
speed = 30
angle = 90.0
shot_delay = 2.0
aimed = false
station = 0

[sub_resource type="Resource" id="Resource_mp57j"]
script = ExtResource("5_ri64t")
firing_points = 24
ripple = false
ripple_delay = 0.0

[sub_resource type="Resource" id="Resource_qq07s"]
script = ExtResource("3_km3fg")
bullet_type = 0
bullet_pattern = SubResource("Resource_mp57j")
bullet_shape = ExtResource("9_2r06l")
speed = 30
angle = 90.0
shot_delay = 0.0
aimed = false
station = 0

[sub_resource type="Resource" id="Resource_1eptv"]
script = ExtResource("4_nn3en")
attack_name = "Attack"
Firing_Sequence = Array[ExtResource("3_km3fg")]([SubResource("Resource_1a5ne"), SubResource("Resource_qq07s")])
salvos = 1
salvo_delay = 0.4

[sub_resource type="CircleShape2D" id="CircleShape2D_8rgpy"]
radius = 101.045

[node name="CircleBoss" type="Node2D" groups=["boss", "enemy"]]
script = ExtResource("1_m1li8")
points = 1000
speed = 80
explosion_sound = ExtResource("2_veit0")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("4_2bc68")
hframes = 8

[node name="TargetLock" parent="Sprite2D" instance=ExtResource("4_k7s7j")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -192.0
offset_right = -64.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_h8iit")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
libraries = {
"": SubResource("AnimationLibrary_h123k")
}

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-1, -0.499998)
scale = Vector2(11.6, 11.15)

[node name="MovementTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="MilkingTimer" type="Timer" parent="."]
wait_time = 45.0
one_shot = true

[node name="NorthEmitter" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -95)

[node name="SouthEmitter" type="Marker2D" parent="."]
position = Vector2(0, 100)

[node name="EastEmitter" type="Marker2D" parent="."]
position = Vector2(104, 0)

[node name="WestEmitter" type="Marker2D" parent="."]
position = Vector2(-106, 1)

[node name="ShootingComponent" parent="." node_paths=PackedStringArray("stations") instance=ExtResource("4_wa46r")]
shot_timer = 4.0
stations = [NodePath("../NorthEmitter"), NodePath("../SouthEmitter"), NodePath("../EastEmitter"), NodePath("../WestEmitter")]
Attacks = Array[ExtResource("4_nn3en")]([SubResource("Resource_1eptv")])

[node name="Stopwatch" parent="." instance=ExtResource("13_kgi7a")]

[node name="HealthComponent" parent="." instance=ExtResource("14_0th8o")]
max_health = 150

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("15_wdne5")]
collision_layer = 8
collision_mask = 3
health_component = NodePath("../HealthComponent")

[node name="Hitbox" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_8rgpy")

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="MovementTimer" to="." method="_on_movement_timer_timeout"]
[connection signal="timeout" from="MilkingTimer" to="." method="_on_milking_timer_timeout"]
[connection signal="shooting" from="ShootingComponent" to="." method="_on_shooting_component_shooting"]
